<resources>
    <string name="app_name">Accessible Memory Game</string>

    <!-- MainFragment -->
    <string name="txt_text_welcome">Welcome to the Accessible Memory Game. You can find the game settings at the Settings Button. .</string>
    <string name="contentDescription_text_welcome">
        %s
        Instructions:
        1: When you start the game, you will have %d seconds to explore the revealed cards.
        This time can be changed in the settings page.
        2: After the given time to explore, all the cards will be turned face down.
        3: The board is a four rows and four columns size.
        4: You will be able to share your record after finishing the game.
    </string>
    <string name="txt_btn_welcome">Start Game</string>
    <string name="contentDescription_btn_welcome">Start Game</string>
    <string name="txt_img_main">Image, Accessible Memory Game Logo</string>

    <!-- Game Fragment -->
    <string name="card_revealed">Row %d Column %d, %s</string>
    <string name="card_faced_down">Faced down</string>
    <string name="card_found">%s, matched</string>
    <string name="time_to_explore">You have %d seconds to explore</string>
    <string name="game_start">Game started</string>
    <string name="network_error">An error occurred. Please try again.</string>

        <!-- Winner Dialog Fragment -->
    <string name="winner_header">Congratulations</string>
    <string name="winner_body_message">You won in %d seconds</string>
    <string name="winner_animation">Fireworks animation</string>
    <string name="winner_button_text">Return to main</string>
    <string name="winner_bundle_value_winning_seconds_key">timeSpent</string>

    <!-- Game Fragment - Screen Elements -->
    <string name="txt_user_moves">Moves: %d</string>
    <string name="txt_remaining_pairs">Remaining Pairs: %d</string>
    <string name="btn_restart_game">Restart Game</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
        <string name="preference_block_game_settings_tile">Game Settings</string>
        <string name="preference_block_accessibility_settings_tile">Accessibility Settings</string>

        <!-- Pairs to Match Tile -->
        <string name="preference_num_of_matches_per_game_dialog_title">Number of Pair to Match</string>
        <string name="preference_num_of_matches_per_game_key">num_of_matches_per_game</string>
        <string name="preference_num_of_matches_per_game_summary">Choose how many pair you want to match</string>
        <string name="preference_num_of_matches_per_game_title">Number of Pairs to Match</string>

        <!-- Cards to form a Match Tile -->
        <string name="preference_num_of_cards_to_form_match_dialog_title">Number of Cards to Make a Match</string>
        <string name="preference_num_of_cards_to_form_match_key">preference_num_of_cards_to_form_match</string>
        <string name="preference_num_of_cards_to_form_match_summary">Choose how many cards makes one match</string>
        <string name="preference_num_of_cards_to_form_match_title">Number of Cards to Make a Match</string>

        <!-- Time Revealed Tile -->
        <string name="preference_time_revealed_dialog_title">Seconds Cards are Revealed</string>
        <string name="preference_time_revealed_key">preference_time_revealed_key</string>
        <string name="preference_time_revealed_summary">Number of seconds cards are revealed before the game starts</string>
        <string name="preference_time_revealed_title">Seconds Cards are Revealed</string>

        <!-- Accessibility Enable Tile -->
        <string name="preference_accessibility_enabled_title">Accessibility Enabled</string>
        <string name="preference_accessibility_enabled_key">preference_accessibility_enabled_key</string>


</resources>
