<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preference_block_game_settings_tile">

        <ListPreference
            android:defaultValue="10"
            android:dialogTitle="@string/preference_num_of_matches_per_game_dialog_title"
            android:entries="@array/preference_num_of_matches_per_game_entries"
            android:entryValues="@array/preference_num_of_matches_per_game_values"
            android:key="@string/preference_num_of_matches_per_game_key"
            android:summary="@string/preference_num_of_matches_per_game_summary"
            android:title="@string/preference_num_of_matches_per_game_title" />

        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/preference_num_of_cards_to_form_match_dialog_title"
            android:entries="@array/preference_num_of_cards_to_form_match_entries"
            android:entryValues="@array/preference_num_of_cards_to_form_match_values"
            android:key="@string/preference_num_of_cards_to_form_match_key"
            android:summary="@string/preference_num_of_cards_to_form_match_summary"
            android:title="@string/preference_num_of_cards_to_form_match_title" />

        <ListPreference
            android:defaultValue="10"
            android:dialogTitle="@string/preference_time_revealed_dialog_title"
            android:entries="@array/preference_time_revealed_entries"
            android:entryValues="@array/preference_time_revealed_values"
            android:key="@string/preference_time_revealed_key"
            android:summary="@string/preference_time_revealed_summary"
            android:title="@string/preference_time_revealed_title" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>